<resources>
    <string name="app_name">Skinalyze</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="product_brand">Merk produk</string>
    <string name="product_name">Nama produk</string>
    <string name="product_image">product image</string>
    <string name="searchbar_hint">Cari produk</string>
    <string name="brand_type">Merk / tipe</string>
    <string name="product_description">Deskripsi produk</string>
    <string name="price_label">Estimasi harga</string>
    <string name="product_price">Rp100.000</string>
    <string name="problem_label">Mengatasi permasalahan kulit:</string>
    <string name="product_problem">Jerawat, Kerutan, Kusam</string>
    <string name="skin_type_label">Cocok untuk jenis kulit:</string>
    <string name="product_skin_type">Kering, Sensitif</string>
    <string name="skin_type_form_header">Tentukan jenis kulit Anda untuk rekomendasi perawatan terbaik</string>
    <string name="skin_type_question">Apa jenis kulit Anda?</string>
    <string name="normal">Normal</string>
    <string name="oily">Berminyak</string>
    <string name="dry">Kering</string>
    <string name="combination">Kombinasi</string>
    <string name="sensitive_skin_question">Apakah kulit Anda sensitif?</string>
    <string name="sensitive">Ya</string>
    <string name="not_sensitive">Tidak</string>
    <string name="onboarding_title_1">Analisis masalah kulit dengan kecerdasan buatan</string>
    <string name="onboarding_title_2">Rekomendasi perawatan kulit yang dipersonalisasi</string>
    <string name="onboarding_desc_1">Temukan akar masalah kulit Anda dengan akurasi tinggi.</string>
    <string name="onboarding_desc_2">Dapatkan solusi perawatan kulit yang sesuai dengan kebutuhan unik Anda.</string>
    <string name="sign_up">Daftar</string>
    <string name="log_in">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="title_signup_page">Segera buat akun dan temukan personalisasi produk skincare khusus untukmu!</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_too_short_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="gender">Gender</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur</string>
    <string name="daftar_uppercase">DAFTAR</string>
    <string name="masuk_uppercase">MASUK</string>
    <string name="masuk">Masuk</string>
    <string name="title_register_page">Segera masuk dan temukan personalisasi produk skincare khusus untukmu!</string>
    <string name="kamera">Kamera</string>
    <string name="profil">Profil</string>
    <string name="pilih_dari_galeri">PILIH DARI GALERI</string>
    <string name="ambil_foto">AMBIL FOTO</string>
    <string name="analisis_kulit">ANALISIS KULIT</string>
    <string name="produk">Produk</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kulit">Jenis Kulit</string>
    <string name="riwayat_analisis_kulit">Riwayat Analisis Kulit</string>
    <string name="keluar">KELUAR</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="permasalahan_kulit">Permasalahan Kulit</string>
    <string name="produk_skincare_yang_cocok_untuk_anda">Rekomendasi Produk Skincare</string>
    <string name="facial_wash">PEMBERSIH WAJAH</string>
    <string name="toner">TONER</string>
    <string name="moisturizer">PELEMBAB</string>
    <string name="sunscreen">TABIR SURYA</string>
    <string name="serum">SERUM</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Pengklasifikasi gambar gagal diinisialisas</string>
    <string name="woman">Perempuan</string>
    <string name="man">Laki-laki</string>
    <string name="sensitive_skin">, Sensitif</string>
    <string name="no_skintype">Anda belum menentukan jenis kulit Anda.</string>
    <string name="no_history">Anda belum punya riwayat</string>
    <string name="simpan">SIMPAN</string>
    <string name="delete_history">hapus riwayat</string>
    <string name="informasi_personal">Informasi Personal</string>
    <string name="selected_photo">Foto yang dipilih</string>
    <string name="image_login">foto login</string>
    <string name="image_register">foto register</string>
    <string name="logo_skinalyze">logo skinalyze</string>
    <string name="onboarding_acne">analisis kulit</string>
    <string name="onboarding_skincare">rekomendasi skincare</string>
    <string name="navigate_to_detail">lihat detail</string>
    <string name="email_icon">ikon email</string>
    <string name="gender_icon">ikon jenis kelamin</string>
    <string name="age_icon">ikon umur</string>
    <string name="edit_skintype">ubah jenis kulit</string>
    <string name="move_to_history">lihat riwayat</string>
    <string name="history_icon">ikon riwayat</string>
</resources>