<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product">

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.skinalyze.ui.product.ProductFragment"
        android:label="@string/produk"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.skinalyze.ui.camera.CameraFragment"
        android:label="@string/kamera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.skinalyze.ui.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile" />
</navigation>